--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
+    <meta name="description" content="Web site created using create-react-app"/>
+    </script src="/path/to/masonry.pkgd.min.js">
     <title>React App</title>
   </head>
   <body>
