--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
     </script src="/path/to/masonry.pkgd.min.js">
+    </script src="correct-path/Chart.js">
     <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/core-js-bundle@3.5.0/index.min.js" crossorigin="true"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/react@^16/umd/react.production.min.js" crossorigin="true"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/react-dom@^16/umd/react-dom.production.min.js" crossorigin="true"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/components/prism-jsx.min.js"></script>
+  <script type="text/javascript" src="https://code.highcharts.com/8.0.0/highcharts.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/react-jsx-highcharts@^4/dist/react-jsx-highcharts.min.js"></script>
+  <!-- <script type="text/javascript" src="../LiveUpdate/bundle.js"></script> -->
   </body>
 </html>
